--- a/rock-paper-scissor/style.css
+++ b/rock-paper-scissor/style.css
@@ -91,7 +91,7 @@ header > h1{
 
 .choice:hover{
 	cursor: pointer;
-	background: #32CD32;
+	background: #354263;
 
 }
 
@@ -102,4 +102,19 @@ header > h1{
 	font-weight: bold;
 	font-size: 20px;
 	margin-top: 50px;
+}
+
+.green-glow {
+	border: 4px solid #4dcc7d;
+	box-shadow: 0 0 10px #31b43a;
+}
+
+.red-glow {
+	border: 4px solid #fc121b;
+	box-shadow: 0 0 10px #d01115;
+}
+
+.gray-glow {
+	border: 4px solid #464647;
+	box-shadow: 0 0 10px #25292b;
 }
